Bug 1143504 - Disconnect the Cache object from its actor when it gets cycle collected; r=bkelly